[tool.poetry]
name = "mendeleev"
version = "v0.14.0"
description = "Pythonic periodic table of elements"
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
maintainers = ["Lukasz Mentel <lmmentel@gmail.com>"]
readme = "README.md"
documentation = "https://mendeleev.readthedocs.io"
repository = "https://github.com/lmmentel/mendeleev"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
colorama = "^0.4.6"
numpy = [
    { version = "^1.26", python = ">=3.12" },
    { version = "^1.21", python = "<3.12" },
]
pyfiglet = "^0.8.post1"
Pygments = "^2.11.2"
pandas = ">=1.0.0"
SQLAlchemy = ">=1.4.0"
bokeh = { version = "^3.0", optional = true }
jupyter-bokeh = { version = "^3.0.7", optional = true }
plotly = { version = "^5.0", optional = true }
seaborn = { version = "^0.11.1", optional = true }
scipy = [ # required by seaborn
    { version = "^1.11", python = ">=3.12,<3.13", optional = true },
    { version = "^1.6", python = "<3.12", optional = true },
]
pyzmq = { version = "^25.1.2", optional = true }
#    { version = "^25.1.2", python = ">=3.12", optional = true },
#    { version = "^24.0.1", python = "<3.12", optional = true },


[tool.poetry.group.dev.dependencies]
alembic = "^1.5.5"
black = "^22.1.0"
bump2version = "^1.0.1"
ipykernel = "^5.5.0"
ipython = "^8.10"
jupyterlab = "^3.0"
nbsphinx = "^0.9.0"
pandas-stubs = "^1.2.0"
pylint = "^2.7.2"
pytest = "^6.2.2"
Sphinx = "^6.0.0"
sphinx-copybutton = "^0.3.1"
sphinx-material = "^0.0.32"
sphinxcontrib-bibtex = "^2.1.4"
flake8 = "^6.0.0"


[tool.poetry.extras]
vis = ["bokeh", "plotly", "seaborn", "jupyter-bokeh", "scipy", "pyzmq"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--durations=10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
