[tool.poetry]
name = "mendeleev"
version = "v0.20.0"
description = "Pythonic periodic table of elements"
keywords = ["periodic table", "chemistry", "elements", "science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = ["Lukasz Mentel <lmmentel@gmail.com>"]
maintainers = ["Lukasz Mentel <lmmentel@gmail.com>"]
readme = "README.md"
documentation = "https://mendeleev.readthedocs.io"
repository = "https://github.com/lmmentel/mendeleev"
license = "MIT"

# added source section to avoid: https://github.com/python-poetry/poetry/issues/9293
[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
colorama = "^0.4.6"
numpy = [
    { version = "^2.0", python = ">=3.12" },
    { version = "^1.21", python = "<3.12" },
]
pyfiglet = "^0.8.post1"
Pygments = "^2.11.2"
pandas = [
    { version = "^2.1", python = ">=3.12,<3.14" },
    { version = ">=1.0.0", python = "<3.12" },
]
SQLAlchemy = ">=1.4.0"
deprecated = "^1.2.14"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.5.5"
bump2version = "^1.0.1"
invoke = "^2.2.0"
ipykernel = "^6.0"
ipython = "^8.0"
jupyterlab = "^4.0"
nbsphinx = "^0.9.0"
pandas-stubs = "^1.2.0"
pre-commit = "==3.5.0"
pytest = "^8.0.0"
Sphinx = [
    { version = "^8.0.0", python = ">=3.10" },
    { version = "^7.0.0", python = "<3.10" },
]
sphinx-copybutton = "^0.3.1"
sphinx-material = "^0.0.32"
sphinxcontrib-bibtex = "^2.1.4"
pytest-xdist = "^3.6.1"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"

[tool.poetry.group.vis]
optional = true

[tool.poetry.group.vis.dependencies]
bokeh = "^3.0"
jupyter-bokeh = "^4.0"
plotly = "^5.0"
seaborn = ">=0.12"
scipy = [ # required by seaborn
    { version = "^1.11", python = ">=3.12,<3.13", optional = true },
    { version = "^1.6", python = "<3.12", optional = true },
]
pyzmq = "^26.0.0"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--durations=10 -n auto"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
